docs: Añadir reporte de lint grupal